Reproducible for SERVER-53973

To reproduce the bug run:
resmoke.py --suite=concurrency_sharded_multi_stmt_txn_with_stepdowns jstests/concurrency/fsm_workloads/random_moveChunk_refine_collection_shard_key.js